deploy: 58b0a5ae2fb7b9887f41baf5feac16bdeb4eafd6

--- a/user_guides/primitives_pipelines/primitives/TadGAN.html
+++ b/user_guides/primitives_pipelines/primitives/TadGAN.html
@@ -305,18 +305,18 @@
 <span class="gp">   ...: </span>
 
 <span class="gp">In [5]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
-<span class="go">Epoch: 1/5, [Dx loss: [8.066179e+00 1.648595e-01 3.660859e-03 7.897659e-01]] [Dz loss: [ 1.9264321  -0.06156808 -0.04712128  0.20351213]] [G loss: [ 1.0083804e+01 -2.8654526e-03  8.9757882e-02  9.9969119e-01]]</span>
-<span class="go">Epoch: 2/5, [Dx loss: [ 7.7223940e+00 -9.6174419e-02  3.6634334e-05  7.8185320e-01]] [Dz loss: [ 1.52699    -0.9069264   0.24180898  0.21921074]] [G loss: [ 9.2403784e+00  3.3556603e-04 -4.3192947e-01  9.6719718e-01]]</span>
-<span class="go">Epoch: 3/5, [Dx loss: [ 7.5686088e+00 -8.7580442e-02  1.2469185e-03  7.6549423e-01]] [Dz loss: [ 2.3491251  -0.28800535  0.90295297  0.17341775]] [G loss: [ 8.688031e+00 -4.214920e-03 -6.286465e-01  9.320892e-01]]</span>
-<span class="go">Epoch: 4/5, [Dx loss: [ 7.2462935e+00 -2.1112451e-01  2.4446859e-03  7.4549735e-01]] [Dz loss: [ 3.3095932  -0.15697043  1.388589    0.20779745]] [G loss: [ 6.869361   -0.00807374 -1.5655116   0.8442946 ]]</span>
-<span class="go">Epoch: 5/5, [Dx loss: [ 6.872303   -0.3280567   0.00953585  0.7190824 ]] [Dz loss: [3.94521    0.1039859  1.5517797  0.22894444]] [G loss: [ 4.3050604  -0.04399176 -1.7381229   0.60871756]]</span>
+<span class="go">Epoch: 1/5, [Dx loss: [ 7.9746161e+00  2.1216260e-01 -7.0309435e-04  7.7631563e-01]] [Dz loss: [ 1.1530087  -0.08450092  0.05173345  0.11857761]] [G loss: [ 9.9674568e+00  2.8797770e-03 -3.4696173e-02  9.9992734e-01]]</span>
+<span class="go">Epoch: 2/5, [Dx loss: [7.7965393e+00 2.1114033e-01 3.0620932e-04 7.5850928e-01]] [Dz loss: [ 2.3731878  -0.48041648  0.49026     0.23633441]] [G loss: [ 9.7894535e+00  6.0132579e-03 -8.7481521e-02  9.8709226e-01]]</span>
+<span class="go">Epoch: 3/5, [Dx loss: [ 7.4098425e+00 -2.0726044e-02 -3.4364609e-03  7.4340045e-01]] [Dz loss: [ 2.174034   -0.4230133   1.0141016   0.15829459]] [G loss: [ 9.1538668e+00 -6.1580818e-04 -7.0530617e-01  9.8597884e-01]]</span>
+<span class="go">Epoch: 4/5, [Dx loss: [ 7.1231170e+00 -4.7225017e-02  3.0202777e-04  7.1700400e-01]] [Dz loss: [ 2.0258203  -0.94856954  1.7448747   0.12295151]] [G loss: [ 8.4843340e+00  3.2294013e-03 -1.0461922e+00  9.5272970e-01]]</span>
+<span class="go">Epoch: 5/5, [Dx loss: [ 6.7680597e+00 -6.4519577e-02  2.4425487e-03  6.8301368e-01]] [Dz loss: [ 4.020994   -0.12246116  2.5793536   0.15641019]] [G loss: [ 6.2435532e+00 -2.4950064e-03 -2.9968240e+00  9.2428720e-01]]</span>
 
 <span class="gp">In [6]: </span><span class="n">y</span><span class="p">,</span> <span class="n">critic</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">)</span>
 
 <span class="gp">In [7]: </span><span class="nb">print</span><span class="p">(</span><span class="s2">&quot;average reconstructed value: </span><span class="si">{:.2f}</span><span class="s2">, critic score </span><span class="si">{:.2f}</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
 <span class="gp">   ...: </span>    <span class="n">y</span><span class="o">.</span><span class="n">mean</span><span class="p">(),</span> <span class="n">critic</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]))</span>
 <span class="gp">   ...: </span>
-<span class="go">average reconstructed value: 0.27, critic score 0.41</span>
+<span class="go">average reconstructed value: 0.06, critic score 0.10</span>
 </pre></div>
 </div>
 </div>
