--- a/user_guides/primitives_pipelines/primitives/TadGAN.html
+++ b/user_guides/primitives_pipelines/primitives/TadGAN.html
@@ -305,11 +305,11 @@
 <span class="gp">   ...: </span>
 
 <span class="gp">In [5]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
-<span class="go">Epoch: 1/5, [Dx loss: [ 7.8122945e+00 -5.7875682e-02 -7.3857633e-03  7.8775561e-01]] [Dz loss: [ 3.238494    0.08943182 -0.06072235  0.32097846]] [G loss: [10.075596    0.01040169  0.04362658  1.0021567 ]]</span>
-<span class="go">Epoch: 2/5, [Dx loss: [ 7.6982546e+00 -3.2476179e-02 -4.0770797e-03  7.7348077e-01]] [Dz loss: [ 3.470963    0.24067861 -0.09032362  0.33206078]] [G loss: [ 9.3954535e+00  7.2627780e-03 -3.6076286e-01  9.7489542e-01]]</span>
-<span class="go">Epoch: 3/5, [Dx loss: [ 7.5951791e+00  2.3637259e-02 -1.9122206e-03  7.5734538e-01]] [Dz loss: [ 3.0346317  -0.5732953   0.03767082  0.35702562]] [G loss: [ 8.8587580e+00 -3.8513278e-03 -5.3939283e-01  9.4020027e-01]]</span>
-<span class="go">Epoch: 4/5, [Dx loss: [ 7.1630750e+00 -1.9212165e-01  1.7039772e-03  7.3534930e-01]] [Dz loss: [ 4.4195175  -0.30517304  1.4084624   0.33162278]] [G loss: [ 9.566475   -0.01371513 -0.13329935  0.97134894]]</span>
-<span class="go">Epoch: 5/5, [Dx loss: [ 6.9081063  -0.1784217   0.01871607  0.7067812 ]] [Dz loss: [ 2.851254   -0.7829608   0.6648643   0.29693505]] [G loss: [ 8.488636   -0.01463478 -1.5207249   1.0023996 ]]</span>
+<span class="go">Epoch: 1/5, [Dx loss: [ 7.7769413e+00 -1.0798150e-01  2.8594041e-03  7.8820634e-01]] [Dz loss: [ 0.8416617  -1.1267127   0.04367272  0.19247016]] [G loss: [ 1.0021769e+01 -3.0677533e-04  5.5708955e-03  1.0016505e+00]]</span>
+<span class="go">Epoch: 2/5, [Dx loss: [ 7.5996995e+00 -1.9677596e-02 -1.8733678e-03  7.6212507e-01]] [Dz loss: [ 2.4583662  -0.27027377  0.10782804  0.2620812 ]] [G loss: [ 9.9121399e+00 -2.2796206e-03  1.0368043e-01  9.8107392e-01]]</span>
+<span class="go">Epoch: 3/5, [Dx loss: [ 7.0737457e+00 -4.2066824e-01  5.9064543e-03  7.4885070e-01]] [Dz loss: [ 2.569198   -0.52862537  0.282771    0.28150523]] [G loss: [ 9.1750851e+00 -6.7601632e-03 -2.0840229e-01  9.3902469e-01]]</span>
+<span class="go">Epoch: 4/5, [Dx loss: [ 7.2150455e+00 -5.9086539e-02  2.9060373e-03  7.2712260e-01]] [Dz loss: [ 2.8146374  -0.1983027   0.7502265   0.22627138]] [G loss: [ 8.859079   -0.01444258 -0.80582464  0.9679347 ]]</span>
+<span class="go">Epoch: 5/5, [Dx loss: [ 6.7772202  -0.3073209   0.01362381  0.7070917 ]] [Dz loss: [ 2.2528126  -0.5340653   0.7174221   0.20694558]] [G loss: [ 7.294916   -0.02625643 -1.39493     0.8716103 ]]</span>
 
 <span class="gp">In [6]: </span><span class="n">y</span><span class="p">,</span> <span class="n">critic</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">)</span>
 
