deploy: 1dd290ae55fda657c932c03fbe551fd3e4166b36

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -161,6 +161,8 @@
 <li><a href="orion/primitives/azure_anomaly_detector.html">orion.primitives.azure_anomaly_detector</a></li>
 <li><a href="orion/primitives/tadgan.html">orion.primitives.tadgan</a></li>
 <li><a href="orion/primitives/timeseries_anomalies.html">orion.primitives.timeseries_anomalies</a></li>
+<li><a href="orion/primitives/timeseries_errors.html">orion.primitives.timeseries_errors</a></li>
+<li><a href="orion/primitives/timeseries_preprocessing.html">orion.primitives.timeseries_preprocessing</a></li>
 </ul>
 
               </div>
