--- a/user_guides/primitives_pipelines/primitives/score_anomalies.html
+++ b/user_guides/primitives_pipelines/primitives/score_anomalies.html
@@ -39,7 +39,7 @@
     <link rel="shortcut icon" href="../../../_static/favicon.ico"/>
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
-    <link rel="next" title="regression errors" href="regression_errors.html" />
+    <link rel="next" title="reconstuction errors" href="reconstruction_errors.html" />
     <link rel="prev" title="TadGAN" href="TadGAN.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="en" />
@@ -313,7 +313,7 @@
               <div class='prev-next-bottom'>
                 
     <a class='left-prev' id="prev-link" href="TadGAN.html" title="previous page">TadGAN</a>
-    <a class='right-next' id="next-link" href="regression_errors.html" title="next page">regression errors</a>
+    <a class='right-next' id="next-link" href="reconstruction_errors.html" title="next page">reconstuction errors</a>
 
               </div>
               
