--- a/genindex.html
+++ b/genindex.html
@@ -270,6 +270,8 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api_reference/api/orion.primitives.timeseries_preprocessing.fillna.html#orion.primitives.timeseries_preprocessing.fillna">fillna() (in module orion.primitives.timeseries_preprocessing)</a>
+</li>
       <li><a href="api_reference/api/orion.primitives.timeseries_anomalies.find_anomalies.html#orion.primitives.timeseries_anomalies.find_anomalies">find_anomalies() (in module orion.primitives.timeseries_anomalies)</a>
 </li>
   </ul></td>
@@ -366,7 +368,11 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api_reference/api/orion.primitives.timeseries_anomalies.regression_errors.html#orion.primitives.timeseries_anomalies.regression_errors">regression_errors() (in module orion.primitives.timeseries_anomalies)</a>
+      <li><a href="api_reference/api/orion.primitives.timeseries_errors.reconstruction_errors.html#orion.primitives.timeseries_errors.reconstruction_errors">reconstruction_errors() (in module orion.primitives.timeseries_errors)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api_reference/api/orion.primitives.timeseries_errors.regression_errors.html#orion.primitives.timeseries_errors.regression_errors">regression_errors() (in module orion.primitives.timeseries_errors)</a>
 </li>
   </ul></td>
 </tr></table>
