--- a/user_guides/primitives_pipelines/primitives/TadGAN.html
+++ b/user_guides/primitives_pipelines/primitives/TadGAN.html
@@ -367,11 +367,11 @@
 <span class="gp">   ...: </span>
 
 <span class="gp">In [5]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
-<span class="go">Epoch: 1/5, [Dx loss: [ 7.4012737  -0.12128364 -0.01035884  0.7532916 ]] [Dz loss: [3.6446135  0.3151792  0.01098265 0.33184516]] [G loss: [ 1.0000742e+01 -2.0353878e-03  1.8300159e-02  9.9844772e-01]]</span>
-<span class="go">Epoch: 2/5, [Dx loss: [ 7.2324719e+00 -6.8116866e-02 -2.0130491e-03  7.3026019e-01]] [Dz loss: [ 3.1993885  -0.30395266  0.15308087  0.33502603]] [G loss: [ 9.4863520e+00 -2.1985897e-03 -3.8149685e-02  9.5266998e-01]]</span>
-<span class="go">Epoch: 3/5, [Dx loss: [ 6.937735   -0.16152346  0.03099178  0.7068267 ]] [Dz loss: [ 3.4045203   0.77203065 -0.03314461  0.26656342]] [G loss: [ 9.39615    -0.01096139  0.16186447  0.92452466]]</span>
-<span class="go">Epoch: 4/5, [Dx loss: [ 5.9272823e+00 -8.1385452e-01  5.8856690e-03  6.7352509e-01]] [Dz loss: [3.2953947  0.05078407 0.52745914 0.27171513]] [G loss: [ 9.046634   -0.01963557 -0.17663652  0.9242906 ]]</span>
-<span class="go">Epoch: 5/5, [Dx loss: [ 5.6489778  -0.65751565  0.02617903  0.62803143]] [Dz loss: [2.7209387  0.0505604  0.31087974 0.23594984]] [G loss: [ 6.490898   -0.05191371 -0.27741605  0.6820228 ]]</span>
+<span class="go">Epoch: 1/5, [Dx loss: [ 7.4012737  -0.12128352 -0.01035883  0.7532916 ]] [Dz loss: [3.6446135  0.3151792  0.01098265 0.33184516]] [G loss: [ 1.0000742e+01 -2.0353838e-03  1.8300159e-02  9.9844772e-01]]</span>
+<span class="go">Epoch: 2/5, [Dx loss: [ 7.2324715e+00 -6.8116859e-02 -2.0130505e-03  7.3026013e-01]] [Dz loss: [ 3.1993885  -0.30395266  0.1530809   0.33502603]] [G loss: [ 9.4863520e+00 -2.1985956e-03 -3.8149700e-02  9.5267004e-01]]</span>
+<span class="go">Epoch: 3/5, [Dx loss: [ 6.9377356  -0.16152327  0.03099178  0.7068267 ]] [Dz loss: [ 3.40452     0.77203065 -0.03314472  0.26656342]] [G loss: [ 9.39615    -0.01096138  0.16186452  0.92452466]]</span>
+<span class="go">Epoch: 4/5, [Dx loss: [ 5.9272823e+00 -8.1385434e-01  5.8856560e-03  6.7352509e-01]] [Dz loss: [3.295395   0.05078403 0.5274592  0.27171516]] [G loss: [ 9.046634   -0.01963558 -0.17663641  0.9242906 ]]</span>
+<span class="go">Epoch: 5/5, [Dx loss: [ 5.6489778  -0.6575159   0.02617903  0.62803143]] [Dz loss: [2.7209384  0.0505604  0.31087962 0.23594984]] [G loss: [ 6.490898   -0.0519137  -0.27741614  0.6820228 ]]</span>
 
 <span class="gp">In [6]: </span><span class="n">y</span><span class="p">,</span> <span class="n">critic</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">)</span>
 
