deploy: 109c82ab19b9c0116ddb1cf1fb3040d9fdf36c56

--- a/user_guides/primitives_pipelines/primitives/TadGAN.html
+++ b/user_guides/primitives_pipelines/primitives/TadGAN.html
@@ -429,7 +429,7 @@
 <span class="go">Epoch: 2/5, [Dx loss: [ 7.2324715e+00 -6.8116859e-02 -2.0130505e-03  7.3026013e-01]] [Dz loss: [ 3.1993885  -0.30395266  0.1530809   0.33502603]] [G loss: [ 9.4863520e+00 -2.1985956e-03 -3.8149700e-02  9.5267004e-01]]</span>
 <span class="go">Epoch: 3/5, [Dx loss: [ 6.9377356  -0.16152327  0.03099178  0.7068267 ]] [Dz loss: [ 3.40452     0.77203065 -0.03314472  0.26656342]] [G loss: [ 9.39615    -0.01096138  0.16186452  0.92452466]]</span>
 <span class="go">Epoch: 4/5, [Dx loss: [ 5.9272823e+00 -8.1385434e-01  5.8856560e-03  6.7352509e-01]] [Dz loss: [3.295395   0.05078403 0.5274592  0.27171516]] [G loss: [ 9.046634   -0.01963558 -0.17663641  0.9242906 ]]</span>
-<span class="go">Epoch: 5/5, [Dx loss: [ 5.6489778  -0.6575159   0.02617903  0.62803143]] [Dz loss: [2.7209384  0.0505604  0.31087962 0.23594984]] [G loss: [ 6.4909763  -0.05183581 -0.27741614  0.6820228 ]]</span>
+<span class="go">Epoch: 5/5, [Dx loss: [ 5.6489778  -0.6575159   0.02617903  0.62803143]] [Dz loss: [2.7209384  0.0505604  0.31087962 0.23594984]] [G loss: [ 6.490898   -0.0519137  -0.27741614  0.6820228 ]]</span>
 
 <span class="gp">In [6]: </span><span class="n">y</span><span class="p">,</span> <span class="n">critic</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">)</span>
 
